Updated OPENAI model for ingredient classification